--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
 #      url: "https://github.com/"
     - label: "Contact"
       icon: "fas fa-fw fa-address-card"
-      url: "contact"
+      url: "/contact"
 
 footer:
   links:
@@ -96,10 +96,10 @@ footer:
       url: "https://instagram.com/thehawaiiproject"
     - label: "Categories"
       icon: "fas fa-fw fa-list"
-      url: "/bookship-blog/categories/"
+      url: "/categories/"
     - label: "Tags"
       icon: "fas fa-fw fa-tags"
-      url: "/bookship-blog/tags"
+      url: "/tags"
 
 defaults:
   # _posts
